# lapa-llm

./: LICENSE  README.md  README.uk.md
pretraining/quality-classifiers/: README.md  alignment_score.py  fasttext_classifier.py  fineweb_hf.py  gec_score.py  manipulative_detector.py
quantize/: README.md  convert_hf_to_gguf.py
training/: README.md  lapa-12b-instructions.yml  lapa-12b-pt-template.yml
training/dft_plugin/: README.md  pyproject.toml
training/dft_plugin/src/dft/: __init__.py  args.py  dft_plugin.py
