[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dft"
version = "0.1.0"
description = "DFT"
authors = [{name = "Axo-PFE", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "huggingface_hub>=0.24"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
